--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@momsfriendlydevco/angular-ui-loader": "^1.1.0",
     "gsap": "^3.6.1",
-    "imask": "^6.0.7"
+    "imask": "^6.0.7",
+    "qr-scanner": "^1.2.0"
   }
 }
