--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   },
   "devDependencies": {
     "sass": "^1.32.12",
-    "vite": "^2.2.3"
+    "vite": "^2.2.3",
+    "vite-plugin-mkcert": "^1.1.0"
   },
   "dependencies": {
     "@momsfriendlydevco/angular-ui-loader": "^1.1.0",
