--- a/package.json
+++ b/package.json
@@ -8,8 +8,7 @@
   },
   "devDependencies": {
     "sass": "^1.32.12",
-    "vite": "^2.2.3",
-    "vite-plugin-mkcert": "^1.1.0"
+    "vite": "^2.2.3"
   },
   "dependencies": {
     "@momsfriendlydevco/angular-ui-loader": "^1.1.0",
